@@ -1,3 +1,7 @@
+2011-10-18 Fred Kiefer <FredKiefer@gmx.de>
+
+	* Headers/x11/XWindowBuffer.h: Protect the usage of shm.
+
 2011-10-17 Fred Kiefer <FredKiefer@gmx.de>
 
 	* configure.ac: Test for X shape extension
